eureka-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels:
    app: eureka-service
  namespace: spring-cloud    
spec:
  clusterIP: None
  ports:
  - port: 8761
    protocol: TCP
    targetPort: 8761
  selector:
    app: eureka
  type: ClusterIP
